SERVER-52714 Fix the lifetime of ImpersonationSessionGuard in ExecCommandDatabase